--- a/package.json
+++ b/package.json
@@ -8,27 +8,31 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "core-js": "^3.6.5",
-    "register-service-worker": "^1.7.1",
-    "vue": "^2.6.11",
-    "vue-router": "^3.2.0",
-    "vuex": "^3.4.0"
+    "amfe-flexible": "2.2.1",
+    "core-js": "3.6.5",
+    "register-service-worker": "1.7.1",
+    "vant": "2.9.0",
+    "vue": "2.6.11",
+    "vue-router": "3.2.0",
+    "vuex": "3.4.0"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "~4.4.0",
-    "@vue/cli-plugin-eslint": "~4.4.0",
-    "@vue/cli-plugin-pwa": "~4.4.0",
-    "@vue/cli-plugin-router": "~4.4.0",
-    "@vue/cli-plugin-vuex": "~4.4.0",
-    "@vue/cli-service": "~4.4.0",
-    "@vue/eslint-config-prettier": "^6.0.0",
-    "babel-eslint": "^10.1.0",
-    "eslint": "^6.7.2",
-    "eslint-plugin-prettier": "^3.1.3",
-    "eslint-plugin-vue": "^6.2.2",
-    "less": "^3.0.4",
-    "less-loader": "^5.0.0",
-    "prettier": "^1.19.1",
-    "vue-template-compiler": "^2.6.11"
+    "@vue/cli-plugin-babel": "4.4.0",
+    "@vue/cli-plugin-eslint": "4.4.0",
+    "@vue/cli-plugin-pwa": "4.4.0",
+    "@vue/cli-plugin-router": "4.4.0",
+    "@vue/cli-plugin-vuex": "4.4.0",
+    "@vue/cli-service": "4.4.0",
+    "@vue/eslint-config-prettier": "6.0.0",
+    "babel-eslint": "10.1.0",
+    "babel-plugin-import": "1.13.0",
+    "eslint": "6.7.2",
+    "eslint-plugin-prettier": "3.1.3",
+    "eslint-plugin-vue": "6.2.2",
+    "less": "3.0.4",
+    "less-loader": "5.0.0",
+    "postcss-pxtorem": "5.1.1",
+    "prettier": "1.19.1",
+    "vue-template-compiler": "2.6.11"
   }
 }
