--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "vue-h5",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
+  "author": "Zi Jun",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
@@ -9,12 +10,13 @@
   },
   "dependencies": {
     "amfe-flexible": "2.2.1",
+    "axios": "0.19.2",
     "core-js": "3.6.5",
     "register-service-worker": "1.7.1",
     "vant": "2.9.0",
     "vue": "2.6.11",
     "vue-router": "3.2.0",
-    "vuex": "3.4.0"
+    "vuex": "3.5.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "4.4.0",
@@ -26,6 +28,7 @@
     "@vue/eslint-config-prettier": "6.0.0",
     "babel-eslint": "10.1.0",
     "babel-plugin-import": "1.13.0",
+    "compression-webpack-plugin": "4.0.0",
     "eslint": "6.7.2",
     "eslint-plugin-prettier": "3.1.3",
     "eslint-plugin-vue": "6.2.2",
@@ -33,6 +36,8 @@
     "less-loader": "5.0.0",
     "postcss-pxtorem": "5.1.1",
     "prettier": "1.19.1",
-    "vue-template-compiler": "2.6.11"
+    "style-resources-loader": "1.3.3",
+    "vue-template-compiler": "2.6.11",
+    "webpack-bundle-analyzer": "3.8.0"
   }
 }
