--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "vuex": "3.5.1"
   },
   "devDependencies": {
+    "@commitlint/cli": "9.0.1",
+    "@commitlint/config-conventional": "9.0.1",
     "@vue/cli-plugin-babel": "4.4.0",
     "@vue/cli-plugin-eslint": "4.4.0",
     "@vue/cli-plugin-pwa": "4.4.0",
@@ -32,6 +34,7 @@
     "eslint": "6.7.2",
     "eslint-plugin-prettier": "3.1.3",
     "eslint-plugin-vue": "6.2.2",
+    "husky": "4.2.5",
     "less": "3.0.4",
     "less-loader": "5.0.0",
     "postcss-pxtorem": "5.1.1",
@@ -40,5 +43,10 @@
     "vconsole": "3.3.4",
     "vue-template-compiler": "2.6.11",
     "webpack-bundle-analyzer": "3.8.0"
+  },
+  "husky": {
+    "hooks": {
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
+    }
   }
 }
