--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "postcss-pxtorem": "5.1.1",
     "prettier": "1.19.1",
     "style-resources-loader": "1.3.3",
+    "svg-sprite-loader": "5.0.0",
     "vconsole": "3.3.4",
     "vue-template-compiler": "2.6.11",
     "webpack-bundle-analyzer": "3.8.0"
