--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "amfe-flexible": "2.2.1",
     "axios": "0.19.2",
     "core-js": "3.6.5",
+    "dayjs": "1.8.30",
+    "lodash": "4.17.19",
+    "qs": "6.9.4",
     "register-service-worker": "1.7.1",
     "vant": "2.9.0",
     "vue": "2.6.11",
