--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "register-service-worker": "1.7.1",
     "vant": "2.9.0",
     "vue": "2.6.11",
+    "vue-i18n": "8.19.0",
     "vue-router": "3.2.0",
     "vuex": "3.5.1"
   },
