--- a/package.json
+++ b/package.json
@@ -12,13 +12,19 @@
     "amfe-flexible": "2.2.1",
     "axios": "0.19.2",
     "core-js": "3.6.5",
+    "dayjs": "1.8.30",
+    "lodash": "4.17.19",
+    "qs": "6.9.4",
     "register-service-worker": "1.7.1",
     "vant": "2.9.0",
     "vue": "2.6.11",
+    "vue-i18n": "8.19.0",
     "vue-router": "3.2.0",
     "vuex": "3.5.1"
   },
   "devDependencies": {
+    "@commitlint/cli": "9.0.1",
+    "@commitlint/config-conventional": "9.0.1",
     "@vue/cli-plugin-babel": "4.4.0",
     "@vue/cli-plugin-eslint": "4.4.0",
     "@vue/cli-plugin-pwa": "4.4.0",
@@ -32,13 +38,20 @@
     "eslint": "6.7.2",
     "eslint-plugin-prettier": "3.1.3",
     "eslint-plugin-vue": "6.2.2",
+    "husky": "4.2.5",
     "less": "3.0.4",
     "less-loader": "5.0.0",
     "postcss-pxtorem": "5.1.1",
     "prettier": "1.19.1",
     "style-resources-loader": "1.3.3",
+    "svg-sprite-loader": "5.0.0",
     "vconsole": "3.3.4",
     "vue-template-compiler": "2.6.11",
     "webpack-bundle-analyzer": "3.8.0"
+  },
+  "husky": {
+    "hooks": {
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
+    }
   }
 }
